// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceCard renders an href when supplied 1`] = `
<ServiceCard
  url="https://www.thumbtack.com/k/massage/near-me/"
>
  <a
    className="root"
    href="https://www.thumbtack.com/k/massage/near-me/"
  >
    Lorem
  </a>
</ServiceCard>
`;

exports[`ServiceCardDescription renders a description when supplied 1`] = `
<ServiceCardDescription
  iconColor="blue"
>
  <div
    className="descriptionWrap iconBlue"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders a icon and color is blue 1`] = `
<ServiceCardDescription
  icon={<svg />}
  iconColor="blue"
>
  <div
    className="descriptionWrap iconBlue"
  >
    <svg />
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders icon color 1`] = `
<ServiceCardDescription
  icon=""
  iconColor="green"
>
  <div
    className="descriptionWrap iconGreen"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardImage render works 1`] = `
<ServiceCardImage
  alt="duck duck goose"
  url="https://www.thumbtack.com/image.png"
>
  <Image
    alt="duck duck goose"
    aspectRatio="8:5"
    className="image"
    disableLazyLoading={false}
    objectFit="cover"
    objectPosition="center"
    sources={Array []}
    src="https://www.thumbtack.com/image.png"
  >
    <div
      className="image"
      style={
        Object {
          "overflow": "hidden",
          "paddingTop": "62.5%",
          "position": "relative",
        }
      }
    >
      <LazyImage
        alt="duck duck goose"
        onEnter={[Function]}
        root={null}
        sizes="0px"
        sources={Array []}
        src="https://www.thumbtack.com/image.png"
        style={
          Object {
            "bottom": 0,
            "display": "block",
            "fontFamily": "\\"object-fit: cover; object-position: center\\"",
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      >
        <noscript>
          <Picture
            alt="duck duck goose"
            sources={Array []}
            src="https://www.thumbtack.com/image.png"
          />
        </noscript>
      </LazyImage>
    </div>
  </Image>
</ServiceCardImage>
`;

exports[`ServiceCardTitle renders a title when supplied 1`] = `
<ServiceCardTitle>
  <div
    className="title"
    title="Lorem"
  >
    Lorem
  </div>
</ServiceCardTitle>
`;
